<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/critInfo"
            android:icon="@drawable/baseline_new_releases_24"
            android:title="@string/critInfo" />
        <item
            android:id="@+id/infoState"
            android:icon="@drawable/baseline_swap_horiz_24"
            android:title="@string/infoState" />
        <item
            android:id="@+id/secMeas"
            android:icon="@drawable/baseline_lock_24"
            android:title="@string/secMeas" />
        <item
            android:id="@+id/genBusUpgrades"
            android:icon="@drawable/baseline_work_24"
            android:title="@string/genBusUpgrades" />
        <item
            android:id="@+id/statsFrag"
            android:icon="@drawable/baseline_leaderboard_24"
            android:title="Statistics/CBA" />
    </group>
</menu>