<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/genBusUpgrades">

    <fragment
        android:id="@+id/critInfo"
        android:name="com.sod.securityoperationsdefense.ui.home.HomeFragment"
        android:label="@string/critInfo"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/infoState"
        android:name="com.sod.securityoperationsdefense.ui.gallery.GalleryFragment"
        android:label="@string/infoState"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/secMeas"
        android:name="com.sod.securityoperationsdefense.ui.slideshow.SlideshowFragment"
        android:label="@string/secMeas"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/genBusUpgrades"
        android:name="com.sod.securityoperationsdefense.ui.slideshow.SlideshowFragment"
        android:label="@string/genBusUpgrades"
        tools:layout="@layout/fragment_slideshow" />
</navigation>