<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="?attr/colorPrimary"
    android:theme="@style/ThemeOverlay.SecurityOperationsDefense.FullscreenContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/nav_header_desc"
                    app:srcCompat="@drawable/abc_vector_test" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/action_settings"
                    app:srcCompat="@drawable/ic_settings" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/settings"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white" />
            </TableRow>

        </TableLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="0dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:text="@string/music"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/volume"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="273dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/cardview_dark_background"
                    android:text="@string/newTutorial" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/cardview_dark_background"
                    android:text="@string/reset" />
            </LinearLayout>

        </LinearLayout>

        <!-- idea for horizontal line (View) from https://www.geeksforgeeks.org/how-to-draw-horizontal-and-vertical-lines-in-an-android-app-using-xml/ -->

    </LinearLayout>

    <!--    <com.google.android.material.card.MaterialCardView-->
    <!--        android:id="@+id/card"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="8dp"-->
    <!--        android:background="@color/purple_200"-->
    <!--        app:cardBackgroundColor="@color/purple_200"-->
    <!--        app:cardElevation="6dp"-->
    <!--        tools:layout_editor_absoluteX="8dp"-->
    <!--        tools:layout_editor_absoluteY="8dp"></com.google.android.material.card.MaterialCardView>-->
</androidx.constraintlayout.widget.ConstraintLayout>