<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.SecurityOperationsDefense.FullscreenContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        android:background="@color/cardview_dark_background">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:elevation="20dp"
            app:cardElevation="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:backgroundTint="@color/primary"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="20dp">

                <ImageView
                    android:id="@+id/instArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/nav_header_desc"
                    app:srcCompat="@drawable/abc_vector_test" />

                <TextView
                    android:id="@+id/instLabel"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Instructions"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white"
                />

            </TableRow>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            app:cardElevation="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:backgroundTint="@color/secondary"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/inst"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            app:cardElevation="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:backgroundTint="@color/secondary"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/example"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>